# fastmath

./: .clang-format  .fastmath  .gitignore  .pre-commit-config.yaml  .stignore  CHANGELOG.md  INSTALL  LICENSE.md  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  ax_fastmath.m4  bootstrap.sh  build-rpm-spec.sh  build-rpm.sh  config.status  configure  configure.ac  fastmath.spec  install  intersection.s  vecprod.h
.github/workflows/: buildrpm.yml  changelog.yml  changelog_reminder.yml  release.yml  tests.yml  version.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
inc/: BenchFastMath.h  BenchFastNumInt.h  Coordinates.h  FastBitset.h  FastMath.h  FastNumInt.h  Makefile.am  Makefile.in  MersenneRNG.h  config.h  config.h.in  coordinates.h  fastapprox.h  fastbitset.h  fastgraph.h  fastmath.h  integration.h  memory.h  mersenne.h  nint.h  printcolor.h  progressbar.h  ran2.h  resources.h  stopwatch.h
inc/intrinsics/: ammintrin.h  immintrin.h  jvmpi.h  mm3dnow.h  smmintrin.h  tmmintrin.h  x86intrin.h  xmmintrin.h  xopintrin.h
include/fastmath/: config.h.in  fastapprox.h  fastbitset.h  fastmath.h  integration.h  mersenne.h  nint.h  printcolor.h  progressbar.h  resources.h  stamp-h1  stopwatch.h
m4/: ax_compare_version.m4  ax_compiler_version.m4  ax_cxx_compile_stdcxx_11.m4  ax_fastmath.m4  ax_platform.m4  gsl.m4
nint/: Makefile.am  Makefile.in  nint.cpp
opt/intrinsics/: emmintrin.h  f16cintrin.h  fma4intrin.h  jawt_md.h  nmmintrin.h  pmmintrin.h  wmmintrin.h
opt/nintlib/: Makefile.am  Makefile.in  nint.hpp
opt/nintlib/.deps/: nint.Po
pkg/: build-rpm-spec.sh  build-rpm.sh
recipes/: build-rpm.sh
src/: .BenchFastNumInt.cpp.swp  BenchFastMath.cpp  BenchFastNumInt.cpp  FastMath.cpp  FastNumInt.cpp  Makefile.am  Makefile.in  TestFastBitset.cpp  TestFastNumInt.cpp  fastmath.cpp  integration.cpp  memory.cpp  nint.cpp  printcolor.cpp  progressbar.cpp  ran2.cpp  resources.cpp  stopwatch.cpp
src/.deps/: FastMath.Po  FastNumInt.Po  TestFastBitset.Po  stopwatch.Po
test/: Makefile.am  clone  clone.cpp  coords  coords.cpp  count  count.cpp  difference  difference.cpp  disjointunion  disjointunion.cpp  experimental  experimental.cpp  general  general.cpp  intersection  intersection.cpp  test.sh  union  union.cpp
test/benchmark/: BenchFastMath.h  BenchFastNumInt.h
tests/: Makefile  Makefile.am  clone.cpp  count.cpp  difference.cpp  disjointunion.cpp  fastmath_test  fastmath_test.cpp  general.cpp  h5test.h5  hdf5.cpp  intersection.cpp  test.sh  union.cpp
tests/benchmark/: BenchFastMath.cpp  BenchFastMath.h  BenchFastNumInt.cpp  BenchFastNumInt.h
tests/functional_tests/: clone.cpp  disjointunion.cpp  general.cpp  union.cpp
