###########################
#(C) Will Cunningham 2017 #
#         DK Lab          #
# Northeastern University #
###########################

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4 --install

include_HEADERS = config.h Coordinates.h fastapprox.h FastBitset.h FastMath.h FastNumInt.h stopwatch.h
nobase_include_HEADERS = @xtra@
EXTRA_HEADERS =
