###########################
#(C) Will Cunningham 2017 #
#         DK Lab          #
# Northeastern University #
###########################

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4 --install

otherincludedir=$(includedir)/fastmath
otherinclude_HEADERS = config.h fastapprox.h fastbitset.h fastmath.h integration.h mersenne.h nint.h printcolor.h progressbar.h stopwatch.h resources.h
#nobase_include_HEADERS = @xtra@
#EXTRA_HEADERS =
